cudaq/test/Transforms/mapping_invalid_device_topology_destination.qke
// ========================================================================== //
// Copyright (c) 2026 NVIDIA Corporation & Affiliates.                        //
// All rights reserved.                                                       //
//                                                                            //
// This source code and the accompanying materials are made available under   //
// the terms of the Apache License 2.0 which accompanies this distribution.   //
// ========================================================================== //

// RUN: cudaq-opt '--qubit-mapping=device=file(%S/mapping_invalid_device_topology_destination.txt)' %s -verify-diagnostics

// expected-error@unknown {{device topology qubit index 5 is out of range for 5 nodes}}
module {}
